Fixed overlapping fields

--- a/app/View/static/css/main.css
+++ b/app/View/static/css/main.css
@@ -59,6 +59,7 @@ body {
 }
 
 .form-group {
+    display: block;
     margin-bottom: 10px;
     margin-left: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
